parser.output
Grammar

    0 $accept: desc_algoritmo $end

    1 desc_algoritmo: algoritmoTK identificadoresTK puntoYcomaTK cabecera_alg bloque_alg falgoritmoTK puntoTK

    2 cabecera_alg: decl_globales decl_a_f decl_ent_sal comentario

    3 comentario: aperturaComentarioTK identificadoresTK cierreComentarioTK
    4           | precondicionTK
    5           | postcondicionTK

    6 bloque_alg: bloque comentario

    7 decl_globales: declaracion_tipo decl_globales
    8              | declaracionConstantesV decl_globales
    9              | %empty

   10 decl_a_f: accion_d decl_a_f
   11         | funcion_d decl_a_f
   12         | %empty

   13 bloque: declaraciones instrucciones

   14 declaraciones: declaracion_tipo declaraciones
   15              | declaracionConstantesV declaraciones
   16              | declaracionVariablesV declaraciones
   17              | %empty

   18 expresion: expresion sumaYrestaTK expresion
   19          | expresion divisionYmultiplicacionTK expresion
   20          | operando
   21          | literalTK
   22          | sumaYrestaTK expresion
   23          | expresion yTK expresion
   24          | expresion oTK expresion
   25          | negacionTK expresion
   26          | verdaderoTK
   27          | falsoTK
   28          | expresion comparacionTK expresion
   29          | expresion igualTK expresion
   30          | aperturaParentesisTK expresion cierreParentesisTK
   31          | funcion_ll

   32 operando: identificadoresTK
   33         | operando puntoTK operando
   34         | operando aperturaArrayTK expresion cierreArrayTK
   35         | operando referenciaTK

   36 accion_d: accionTK a_cabecera bloque faccionTK

   37 funcion_d: funcionTK f_cabecera bloque devolverTK expresion ffuncionTK

   38 a_cabecera: identificadoresTK aperturaParentesisTK d_par_form cierreParentesisTK puntoYcomaTK

   39 f_cabecera: identificadoresTK aperturaParentesisTK listaDeclVariablesV cierreParentesisTK devolverTK d_tipo puntoYcomaTK

   40 d_par_form: d_p_form puntoYcomaTK d_par_form
   41           | %empty

   42 d_p_form: entradaTK declaracionDeVariablesV dosPuntosTK d_tipo
   43         | salidaTK declaracionDeVariablesV dosPuntosTK d_tipo
   44         | entradaSalidaTK declaracionDeVariablesV dosPuntosTK d_tipo

   45 declaracion_tipo: tipoTK lista_de_tipo ftipoTK

   46 lista_de_tipo: identificadoresTK igualTK d_tipo puntoYcomaTK lista_de_tipo
   47              | %empty

   48 d_tipo: literalTuplaTK lista_campos finLiteralTuplaTK
   49       | tablaTK aperturaArrayTK expresion subrangoTK expresion cierreArrayTK deTK d_tipo
   50       | identificadoresTK
   51       | expresion subrangoTK expresion
   52       | referenciaTK d_tipo
   53       | tipoVarTK

   54 lista_campos: identificadoresTK dosPuntosTK d_tipo puntoYcomaTK lista_campos
   55             | %empty

   56 decl_ent: entradaTK lista_d_var

   57 decl_sal: salidaTK lista_d_var

   58 lista_d_var: lista_id dosPuntosTK d_tipo puntoYcomaTK lista_d_var
   59            | %empty

   60 lista_id: identificadoresTK separadorTK lista_id
   61         | identificadoresTK

   62 decl_ent_sal: decl_ent
   63             | decl_ent decl_sal
   64             | decl_sal

   65 instrucciones: instruccion puntoYcomaTK instrucciones
   66              | instruccion

   67 instruccion: continuarTK
   68            | asignacion
   69            | alternativa
   70            | iteracion
   71            | accion_ll
   72            | %empty

   73 asignacion: operando asignacionTK expresion

   74 alternativa: condicionSiTK expresion condicionEntoncesTK instrucciones lista_opciones finCondicionSiTK

   75 lista_opciones: condicionSiNoTK expresion condicionEntoncesTK instrucciones lista_opciones
   76               | %empty

   77 iteracion: it_cota_fija
   78          | it_cota_exp

   79 it_cota_exp: mientrasTK expresion condicionMientrasTK instrucciones finMientrasTK

   80 it_cota_fija: condicionParaTK identificadoresTK asignacionTK expresion hastaTK expresion condicionMientrasTK instrucciones finCondicionParaTK

   81 accion_ll: identificadoresTK aperturaParentesisTK l_ll cierreParentesisTK

   82 funcion_ll: identificadoresTK aperturaParentesisTK l_ll cierreParentesisTK

   83 l_ll: expresion separadorTK l_ll
   84     | expresion

   85 declaracionConstantesV: constTK listaDeclConstantesV fconstTK

   86 listaDeclConstantesV: declaracionDeConstanteV
   87                     | listaDeclConstantesV puntoYcomaTK listaDeclConstantesV

   88 declaracionDeConstanteV: nombreConstanteTK igualTK literalTK

   89 declaracionVariablesV: varTK listaDeclVariablesV finVarTK

   90 listaDeclVariablesV: declaracionDeVariablesV
   91                    | listaDeclVariablesV puntoYcomaTK listaDeclVariablesV
   92                    | %empty

   93 declaracionDeVariablesV: lista_id dosPuntosTK tipoVarTK


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    constTK (258) 85
    fconstTK (259) 85
    igualTK (260) 29 46 88
    separadorTK (261) 60 83
    dosPuntosTK (262) 42 43 44 54 58 93
    aperturaParentesisTK (263) 30 38 39 81 82
    cierreParentesisTK (264) 30 38 39 81 82
    aperturaArrayTK (265) 34 49
    cierreArrayTK (266) 34 49
    aperturaComentarioTK (267) 3
    cierreComentarioTK (268) 3
    sumaYrestaTK <cadena> (269) 18 22
    negacionTK (270) 25
    deTK (271) 49
    puntoYcomaTK (272) 1 38 39 40 46 54 58 65 87 91
    comparacionTK (273) 28
    divisionYmultiplicacionTK <cadena> (274) 19
    tipoTK (275) 45
    ftipoTK (276) 45
    referenciaTK (277) 35 52
    devolverTK (278) 37 39
    continuarTK (279) 67
    subrangoTK (280) 49 51
    yTK (281) 23
    oTK (282) 24
    hastaTK (283) 80
    tablaTK (284) 49
    varTK (285) 89
    finVarTK (286) 89
    mientrasTK (287) 79
    condicionMientrasTK (288) 79 80
    finMientrasTK (289) 79
    literalTuplaTK (290) 48
    finLiteralTuplaTK (291) 48
    algoritmoTK (292) 1
    falgoritmoTK (293) 1
    accionTK (294) 36
    faccionTK (295) 36
    funcionTK (296) 37
    ffuncionTK (297) 37
    entradaTK (298) 42 56
    salidaTK (299) 43 57
    entradaSalidaTK (300) 44
    asignacionTK <cadena> (301) 73 80
    condicionSiTK (302) 74
    finCondicionSiTK (303) 74
    condicionEntoncesTK (304) 74 75
    condicionParaTK (305) 80
    finCondicionParaTK (306) 80
    condicionSiNoTK (307) 75
    tipoVarTK <tipo> (308) 53 93
    identificadoresTK <cadena> (309) 1 3 32 38 39 46 50 54 60 61 80 81 82
    nombreConstanteTK <cadena> (310) 88
    puntoTK (311) 1 33
    literalTK <literal> (312) 21 88
    verdaderoTK (313) 26
    falsoTK (314) 27
    precondicionTK (315) 4
    postcondicionTK (316) 5


Nonterminals, with rules where they appear

    $accept (62)
        on left: 0
    desc_algoritmo (63)
        on left: 1
        on right: 0
    cabecera_alg (64)
        on left: 2
        on right: 1
    comentario (65)
        on left: 3 4 5
        on right: 2 6
    bloque_alg (66)
        on left: 6
        on right: 1
    decl_globales (67)
        on left: 7 8 9
        on right: 2 7 8
    decl_a_f (68)
        on left: 10 11 12
        on right: 2 10 11
    bloque (69)
        on left: 13
        on right: 6 36 37
    declaraciones (70)
        on left: 14 15 16 17
        on right: 13 14 15 16
    expresion <info> (71)
        on left: 18 19 20 21 22 23 24 25 26 27 28 29 30 31
        on right: 18 19 22 23 24 25 28 29 30 34 37 49 51 73 74 75 79 80 83 84
    operando <info> (72)
        on left: 32 33 34 35
        on right: 20 33 34 35 73
    accion_d (73)
        on left: 36
        on right: 10
    funcion_d (74)
        on left: 37
        on right: 11
    a_cabecera (75)
        on left: 38
        on right: 36
    f_cabecera (76)
        on left: 39
        on right: 37
    d_par_form (77)
        on left: 40 41
        on right: 38 40
    d_p_form (78)
        on left: 42 43 44
        on right: 40
    declaracion_tipo (79)
        on left: 45
        on right: 7 14
    lista_de_tipo (80)
        on left: 46 47
        on right: 45 46
    d_tipo (81)
        on left: 48 49 50 51 52 53
        on right: 39 42 43 44 46 49 52 54 58
    lista_campos (82)
        on left: 54 55
        on right: 48 54
    decl_ent (83)
        on left: 56
        on right: 62 63
    decl_sal (84)
        on left: 57
        on right: 63 64
    lista_d_var (85)
        on left: 58 59
        on right: 56 57 58
    lista_id <paraLid> (86)
        on left: 60 61
        on right: 58 60 93
    decl_ent_sal (87)
        on left: 62 63 64
        on right: 2
    instrucciones (88)
        on left: 65 66
        on right: 13 65 74 75 79 80
    instruccion (89)
        on left: 67 68 69 70 71 72
        on right: 65 66
    asignacion (90)
        on left: 73
        on right: 68
    alternativa (91)
        on left: 74
        on right: 69
    lista_opciones (92)
        on left: 75 76
        on right: 74 75
    iteracion (93)
        on left: 77 78
        on right: 70
    it_cota_exp (94)
        on left: 79
        on right: 78
    it_cota_fija (95)
        on left: 80
        on right: 77
    accion_ll (96)
        on left: 81
        on right: 71
    funcion_ll (97)
        on left: 82
        on right: 31
    l_ll (98)
        on left: 83 84
        on right: 81 82 83
    declaracionConstantesV (99)
        on left: 85
        on right: 8 15
    listaDeclConstantesV (100)
        on left: 86 87
        on right: 85 87
    declaracionDeConstanteV <entero> (101)
        on left: 88
        on right: 86
    declaracionVariablesV <entero> (102)
        on left: 89
        on right: 16
    listaDeclVariablesV <entero> (103)
        on left: 90 91 92
        on right: 39 89 91
    declaracionDeVariablesV (104)
        on left: 93
        on right: 42 43 44 90


State 0

    0 $accept: . desc_algoritmo $end

    algoritmoTK  shift, and go to state 1

    desc_algoritmo  go to state 2


State 1

    1 desc_algoritmo: algoritmoTK . identificadoresTK puntoYcomaTK cabecera_alg bloque_alg falgoritmoTK puntoTK

    identificadoresTK  shift, and go to state 3


State 2

    0 $accept: desc_algoritmo . $end

    $end  shift, and go to state 4


State 3

    1 desc_algoritmo: algoritmoTK identificadoresTK . puntoYcomaTK cabecera_alg bloque_alg falgoritmoTK puntoTK

    puntoYcomaTK  shift, and go to state 5


State 4

    0 $accept: desc_algoritmo $end .

    $default  accept


State 5

    1 desc_algoritmo: algoritmoTK identificadoresTK puntoYcomaTK . cabecera_alg bloque_alg falgoritmoTK puntoTK

    constTK  shift, and go to state 6
    tipoTK   shift, and go to state 7

    $default  reduce using rule 9 (decl_globales)

    cabecera_alg            go to state 8
    decl_globales           go to state 9
    declaracion_tipo        go to state 10
    declaracionConstantesV  go to state 11


State 6

   85 declaracionConstantesV: constTK . listaDeclConstantesV fconstTK

    nombreConstanteTK  shift, and go to state 12

    listaDeclConstantesV     go to state 13
    declaracionDeConstanteV  go to state 14


State 7

   45 declaracion_tipo: tipoTK . lista_de_tipo ftipoTK

    identificadoresTK  shift, and go to state 15

    $default  reduce using rule 47 (lista_de_tipo)

    lista_de_tipo  go to state 16


State 8

    1 desc_algoritmo: algoritmoTK identificadoresTK puntoYcomaTK cabecera_alg . bloque_alg falgoritmoTK puntoTK

    constTK  shift, and go to state 6
    tipoTK   shift, and go to state 7
    varTK    shift, and go to state 17

    $default  reduce using rule 17 (declaraciones)

    bloque_alg              go to state 18
    bloque                  go to state 19
    declaraciones           go to state 20
    declaracion_tipo        go to state 21
    declaracionConstantesV  go to state 22
    declaracionVariablesV   go to state 23


State 9

    2 cabecera_alg: decl_globales . decl_a_f decl_ent_sal comentario

    accionTK   shift, and go to state 24
    funcionTK  shift, and go to state 25

    $default  reduce using rule 12 (decl_a_f)

    decl_a_f   go to state 26
    accion_d   go to state 27
    funcion_d  go to state 28


State 10

    7 decl_globales: declaracion_tipo . decl_globales

    constTK  shift, and go to state 6
    tipoTK   shift, and go to state 7

    $default  reduce using rule 9 (decl_globales)

    decl_globales           go to state 29
    declaracion_tipo        go to state 10
    declaracionConstantesV  go to state 11


State 11

    8 decl_globales: declaracionConstantesV . decl_globales

    constTK  shift, and go to state 6
    tipoTK   shift, and go to state 7

    $default  reduce using rule 9 (decl_globales)

    decl_globales           go to state 30
    declaracion_tipo        go to state 10
    declaracionConstantesV  go to state 11


State 12

   88 declaracionDeConstanteV: nombreConstanteTK . igualTK literalTK

    igualTK  shift, and go to state 31


State 13

   85 declaracionConstantesV: constTK listaDeclConstantesV . fconstTK
   87 listaDeclConstantesV: listaDeclConstantesV . puntoYcomaTK listaDeclConstantesV

    fconstTK      shift, and go to state 32
    puntoYcomaTK  shift, and go to state 33


State 14

   86 listaDeclConstantesV: declaracionDeConstanteV .

    $default  reduce using rule 86 (listaDeclConstantesV)


State 15

   46 lista_de_tipo: identificadoresTK . igualTK d_tipo puntoYcomaTK lista_de_tipo

    igualTK  shift, and go to state 34


State 16

   45 declaracion_tipo: tipoTK lista_de_tipo . ftipoTK

    ftipoTK  shift, and go to state 35


State 17

   89 declaracionVariablesV: varTK . listaDeclVariablesV finVarTK

    identificadoresTK  shift, and go to state 36

    $default  reduce using rule 92 (listaDeclVariablesV)

    lista_id                 go to state 37
    listaDeclVariablesV      go to state 38
    declaracionDeVariablesV  go to state 39


State 18

    1 desc_algoritmo: algoritmoTK identificadoresTK puntoYcomaTK cabecera_alg bloque_alg . falgoritmoTK puntoTK

    falgoritmoTK  shift, and go to state 40


State 19

    6 bloque_alg: bloque . comentario

    aperturaComentarioTK  shift, and go to state 41
    precondicionTK        shift, and go to state 42
    postcondicionTK       shift, and go to state 43

    comentario  go to state 44


State 20

   13 bloque: declaraciones . instrucciones

    continuarTK        shift, and go to state 45
    mientrasTK         shift, and go to state 46
    condicionSiTK      shift, and go to state 47
    condicionParaTK    shift, and go to state 48
    identificadoresTK  shift, and go to state 49

    $default  reduce using rule 72 (instruccion)

    operando       go to state 50
    instrucciones  go to state 51
    instruccion    go to state 52
    asignacion     go to state 53
    alternativa    go to state 54
    iteracion      go to state 55
    it_cota_exp    go to state 56
    it_cota_fija   go to state 57
    accion_ll      go to state 58


State 21

   14 declaraciones: declaracion_tipo . declaraciones

    constTK  shift, and go to state 6
    tipoTK   shift, and go to state 7
    varTK    shift, and go to state 17

    $default  reduce using rule 17 (declaraciones)

    declaraciones           go to state 59
    declaracion_tipo        go to state 21
    declaracionConstantesV  go to state 22
    declaracionVariablesV   go to state 23


State 22

   15 declaraciones: declaracionConstantesV . declaraciones

    constTK  shift, and go to state 6
    tipoTK   shift, and go to state 7
    varTK    shift, and go to state 17

    $default  reduce using rule 17 (declaraciones)

    declaraciones           go to state 60
    declaracion_tipo        go to state 21
    declaracionConstantesV  go to state 22
    declaracionVariablesV   go to state 23


State 23

   16 declaraciones: declaracionVariablesV . declaraciones

    constTK  shift, and go to state 6
    tipoTK   shift, and go to state 7
    varTK    shift, and go to state 17

    $default  reduce using rule 17 (declaraciones)

    declaraciones           go to state 61
    declaracion_tipo        go to state 21
    declaracionConstantesV  go to state 22
    declaracionVariablesV   go to state 23


State 24

   36 accion_d: accionTK . a_cabecera bloque faccionTK

    identificadoresTK  shift, and go to state 62

    a_cabecera  go to state 63


State 25

   37 funcion_d: funcionTK . f_cabecera bloque devolverTK expresion ffuncionTK

    identificadoresTK  shift, and go to state 64

    f_cabecera  go to state 65


State 26

    2 cabecera_alg: decl_globales decl_a_f . decl_ent_sal comentario

    entradaTK  shift, and go to state 66
    salidaTK   shift, and go to state 67

    decl_ent      go to state 68
    decl_sal      go to state 69
    decl_ent_sal  go to state 70


State 27

   10 decl_a_f: accion_d . decl_a_f

    accionTK   shift, and go to state 24
    funcionTK  shift, and go to state 25

    $default  reduce using rule 12 (decl_a_f)

    decl_a_f   go to state 71
    accion_d   go to state 27
    funcion_d  go to state 28


State 28

   11 decl_a_f: funcion_d . decl_a_f

    accionTK   shift, and go to state 24
    funcionTK  shift, and go to state 25

    $default  reduce using rule 12 (decl_a_f)

    decl_a_f   go to state 72
    accion_d   go to state 27
    funcion_d  go to state 28


State 29

    7 decl_globales: declaracion_tipo decl_globales .

    $default  reduce using rule 7 (decl_globales)


State 30

    8 decl_globales: declaracionConstantesV decl_globales .

    $default  reduce using rule 8 (decl_globales)


State 31

   88 declaracionDeConstanteV: nombreConstanteTK igualTK . literalTK

    literalTK  shift, and go to state 73


State 32

   85 declaracionConstantesV: constTK listaDeclConstantesV fconstTK .

    $default  reduce using rule 85 (declaracionConstantesV)


State 33

   87 listaDeclConstantesV: listaDeclConstantesV puntoYcomaTK . listaDeclConstantesV

    nombreConstanteTK  shift, and go to state 12

    listaDeclConstantesV     go to state 74
    declaracionDeConstanteV  go to state 14


State 34

   46 lista_de_tipo: identificadoresTK igualTK . d_tipo puntoYcomaTK lista_de_tipo

    aperturaParentesisTK  shift, and go to state 75
    sumaYrestaTK          shift, and go to state 76
    negacionTK            shift, and go to state 77
    referenciaTK          shift, and go to state 78
    tablaTK               shift, and go to state 79
    literalTuplaTK        shift, and go to state 80
    tipoVarTK             shift, and go to state 81
    identificadoresTK     shift, and go to state 82
    literalTK             shift, and go to state 83
    verdaderoTK           shift, and go to state 84
    falsoTK               shift, and go to state 85

    expresion   go to state 86
    operando    go to state 87
    d_tipo      go to state 88
    funcion_ll  go to state 89


State 35

   45 declaracion_tipo: tipoTK lista_de_tipo ftipoTK .

    $default  reduce using rule 45 (declaracion_tipo)


State 36

   60 lista_id: identificadoresTK . separadorTK lista_id
   61         | identificadoresTK .

    separadorTK  shift, and go to state 90

    $default  reduce using rule 61 (lista_id)


State 37

   93 declaracionDeVariablesV: lista_id . dosPuntosTK tipoVarTK

    dosPuntosTK  shift, and go to state 91


State 38

   89 declaracionVariablesV: varTK listaDeclVariablesV . finVarTK
   91 listaDeclVariablesV: listaDeclVariablesV . puntoYcomaTK listaDeclVariablesV

    puntoYcomaTK  shift, and go to state 92
    finVarTK      shift, and go to state 93


State 39

   90 listaDeclVariablesV: declaracionDeVariablesV .

    $default  reduce using rule 90 (listaDeclVariablesV)


State 40

    1 desc_algoritmo: algoritmoTK identificadoresTK puntoYcomaTK cabecera_alg bloque_alg falgoritmoTK . puntoTK

    puntoTK  shift, and go to state 94


State 41

    3 comentario: aperturaComentarioTK . identificadoresTK cierreComentarioTK

    identificadoresTK  shift, and go to state 95


State 42

    4 comentario: precondicionTK .

    $default  reduce using rule 4 (comentario)


State 43

    5 comentario: postcondicionTK .

    $default  reduce using rule 5 (comentario)


State 44

    6 bloque_alg: bloque comentario .

    $default  reduce using rule 6 (bloque_alg)


State 45

   67 instruccion: continuarTK .

    $default  reduce using rule 67 (instruccion)


State 46

   79 it_cota_exp: mientrasTK . expresion condicionMientrasTK instrucciones finMientrasTK

    aperturaParentesisTK  shift, and go to state 75
    sumaYrestaTK          shift, and go to state 76
    negacionTK            shift, and go to state 77
    identificadoresTK     shift, and go to state 96
    literalTK             shift, and go to state 83
    verdaderoTK           shift, and go to state 84
    falsoTK               shift, and go to state 85

    expresion   go to state 97
    operando    go to state 87
    funcion_ll  go to state 89


State 47

   74 alternativa: condicionSiTK . expresion condicionEntoncesTK instrucciones lista_opciones finCondicionSiTK

    aperturaParentesisTK  shift, and go to state 75
    sumaYrestaTK          shift, and go to state 76
    negacionTK            shift, and go to state 77
    identificadoresTK     shift, and go to state 96
    literalTK             shift, and go to state 83
    verdaderoTK           shift, and go to state 84
    falsoTK               shift, and go to state 85

    expresion   go to state 98
    operando    go to state 87
    funcion_ll  go to state 89


State 48

   80 it_cota_fija: condicionParaTK . identificadoresTK asignacionTK expresion hastaTK expresion condicionMientrasTK instrucciones finCondicionParaTK

    identificadoresTK  shift, and go to state 99


State 49

   32 operando: identificadoresTK .
   81 accion_ll: identificadoresTK . aperturaParentesisTK l_ll cierreParentesisTK

    aperturaParentesisTK  shift, and go to state 100

    $default  reduce using rule 32 (operando)


State 50

   33 operando: operando . puntoTK operando
   34         | operando . aperturaArrayTK expresion cierreArrayTK
   35         | operando . referenciaTK
   73 asignacion: operando . asignacionTK expresion

    aperturaArrayTK  shift, and go to state 101
    referenciaTK     shift, and go to state 102
    asignacionTK     shift, and go to state 103
    puntoTK          shift, and go to state 104


State 51

   13 bloque: declaraciones instrucciones .

    $default  reduce using rule 13 (bloque)


State 52

   65 instrucciones: instruccion . puntoYcomaTK instrucciones
   66              | instruccion .

    puntoYcomaTK  shift, and go to state 105

    $default  reduce using rule 66 (instrucciones)


State 53

   68 instruccion: asignacion .

    $default  reduce using rule 68 (instruccion)


State 54

   69 instruccion: alternativa .

    $default  reduce using rule 69 (instruccion)


State 55

   70 instruccion: iteracion .

    $default  reduce using rule 70 (instruccion)


State 56

   78 iteracion: it_cota_exp .

    $default  reduce using rule 78 (iteracion)


State 57

   77 iteracion: it_cota_fija .

    $default  reduce using rule 77 (iteracion)


State 58

   71 instruccion: accion_ll .
